sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__naked_singles__tests__snapshots__base_2_sample_1_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/naked_singles.rs
description: Strategy NakedSingles executed on grid base_2_sample_1_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═══════════╦═══════════╗
    - ║     │   2 ║     │     ║
    - ║  1  │     ║  4  │     ║
    - ║     │ 3   ║     │ 3   ║
    - ║─────┼─────║─────┼─────║
    - ║   2 │   2 ║ 1 2 │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║ 3   │ 3   ║
    - ╠═══════════╬═══════════╣
    - ║   2 │   2 ║ 1   │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║ 3   │ 3 4 ║
    - ║─────┼─────║─────┼─────║
    - ║     │     ║     │     ║
    - ║     │  1  ║     │  2  ║
    - ║ 3 4 │     ║ 3   │     ║
    - ╚═══════════╩═══════════╝
  deductions:
    - "r0c3: set value 3, because of: r0c3: candidate 3"
    - "r3c2: set value 3, because of: r3c2: candidate 3"
  grid_output:
    - ╔═══════════╦═══════════╗
    - ║     │   2 ║     │     ║
    - ║  1  │     ║  4  │  3  ║
    - ║     │     ║     │     ║
    - ║─────┼─────║─────┼─────║
    - ║   2 │   2 ║ 1 2 │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║     │     ║
    - ╠═══════════╬═══════════╣
    - ║   2 │   2 ║ 1   │ 1   ║
    - ║     │     ║     │     ║
    - ║ 3 4 │ 3 4 ║     │   4 ║
    - ║─────┼─────║─────┼─────║
    - ║     │     ║     │     ║
    - ║     │  1  ║  3  │  2  ║
    - ║   4 │     ║     │     ║
    - ╚═══════════╩═══════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 3
        candidates:
          - 3
    actions:
      - position:
          row: 0
          column: 3
        setValue: 3
  - reasons:
      - position:
          row: 3
          column: 2
        candidates:
          - 3
    actions:
      - position:
          row: 3
          column: 2
        setValue: 3
