sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__naked_singles__tests__snapshots__base_2_sample_2_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/naked_singles.rs
description: Strategy NakedSingles executed on grid base_2_sample_2_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═══════════╦═══════════╗
    - ║   2 │   2 ║     │     ║
    - ║     │     ║  1  │     ║
    - ║ 3   │     ║     │ 3 4 ║
    - ║─────┼─────║─────┼─────║
    - ║     │ 1 2 ║   2 │     ║
    - ║  4  │     ║     │     ║
    - ║     │     ║ 3   │ 3   ║
    - ╠═══════════╬═══════════╣
    - ║ 1   │ 1   ║     │     ║
    - ║     │     ║     │  2  ║
    - ║     │   4 ║ 3 4 │     ║
    - ║─────┼─────║─────┼─────║
    - ║ 1 2 │     ║     │ 1   ║
    - ║     │  3  ║     │     ║
    - ║     │     ║   4 │   4 ║
    - ╚═══════════╩═══════════╝
  deductions:
    - "r0c1: set value 2, because of: r0c1: candidate 2"
    - "r1c3: set value 3, because of: r1c3: candidate 3"
    - "r2c0: set value 1, because of: r2c0: candidate 1"
    - "r3c2: set value 4, because of: r3c2: candidate 4"
  grid_output:
    - ╔═══════════╦═══════════╗
    - ║     │     ║     │     ║
    - ║     │  2  ║  1  │     ║
    - ║ 3   │     ║     │   4 ║
    - ║─────┼─────║─────┼─────║
    - ║     │ 1   ║   2 │     ║
    - ║  4  │     ║     │  3  ║
    - ║     │     ║     │     ║
    - ╠═══════════╬═══════════╣
    - ║     │     ║     │     ║
    - ║  1  │     ║     │  2  ║
    - ║     │   4 ║ 3   │     ║
    - ║─────┼─────║─────┼─────║
    - ║   2 │     ║     │ 1   ║
    - ║     │  3  ║  4  │     ║
    - ║     │     ║     │     ║
    - ╚═══════════╩═══════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 1
        candidates:
          - 2
    actions:
      - position:
          row: 0
          column: 1
        setValue: 2
  - reasons:
      - position:
          row: 1
          column: 3
        candidates:
          - 3
    actions:
      - position:
          row: 1
          column: 3
        setValue: 3
  - reasons:
      - position:
          row: 2
          column: 0
        candidates:
          - 1
    actions:
      - position:
          row: 2
          column: 0
        setValue: 1
  - reasons:
      - position:
          row: 3
          column: 2
        candidates:
          - 4
    actions:
      - position:
          row: 3
          column: 2
        setValue: 4
