sudoku-rs/src/solver/strategic/strategies/impls/snapshots/sudoku__solver__strategic__strategies__impls__naked_singles__tests__snapshots__base_3_sample_1_direct_candidates.snap
---
source: sudoku-rs/src/solver/strategic/strategies/impls/naked_singles.rs
description: Strategy NakedSingles executed on grid base_3_sample_1_direct_candidates
expression: "TransportDeductions :: from(deductions.clone())"
info:
  grid_input:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║  2  │     │  2  ║     │     │     ║     │     │     ║
    - ║   6 │  5  │     ║ 4   │  8  │  3  ║     │  1  │  7  ║
    - ║   9 │     │     ║   9 │     │     ║   9 │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  2  │  2  ║     │     │  2  ║     │  23 │  23 ║
    - ║   6 │   6 │     ║  1  │   6 │   6 ║  4  │     │  5  ║
    - ║ 789 │ 78  │  8  ║     │ 7   │   9 ║     │   9 │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 12  │     ║     │     │     ║     │  2  │     ║
    - ║  3  │     │  4  ║     │     │  5  ║  6  │     │  8  ║
    - ║     │ 7   │     ║ 7 9 │ 7   │     ║     │   9 │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │ 12  │ 12  ║     │     │ 1   ║ 1   │  2  │     ║
    - ║ 45  │ 4   │  5  ║  5  │  3  │   6 ║     │ 4 6 │  9  ║
    - ║ 78  │ 78  │  8  ║ 7   │     │     ║  8  │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │ 1   ║     │     │     ║     │   3 │ 1 3 ║
    - ║     │  9  │     ║  8  │  2  │  4  ║  5  │   6 │     ║
    - ║ 7   │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │ 123 │     ║     │ 1   │ 1   ║ 1 3 │     │ 123 ║
    - ║ 45  │ 4   │  6  ║  5  │  5  │     ║     │  7  │     ║
    - ║  8  │  8  │     ║   9 │     │   9 ║  8  │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │  2  │     ║   3 │ 1   │ 1   ║ 1 3 │     │ 1 3 ║
    - ║ 4 6 │ 4 6 │  9  ║ 4   │ 4   │     ║     │  5  │     ║
    - ║  8  │  8  │     ║     │     │  8  ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │ 1   ║ 1 3 │     │     ║
    - ║ 45  │ 4   │  7  ║  2  │  9  │     ║     │  8  │  6  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  1  │     │  3  ║  6  │  5  │  7  ║  2  │     │  4  ║
    - ║     │  8  │     ║     │     │     ║     │   9 │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
  deductions:
    - "r0c2: set value 2, because of: r0c2: candidate 2"
    - "r0c6: set value 9, because of: r0c6: candidate 9"
    - "r2c4: set value 7, because of: r2c4: candidate 7"
    - "r4c0: set value 7, because of: r4c0: candidate 7"
    - "r4c2: set value 1, because of: r4c2: candidate 1"
    - "r7c1: set value 4, because of: r7c1: candidate 4"
    - "r7c5: set value 1, because of: r7c5: candidate 1"
    - "r8c1: set value 8, because of: r8c1: candidate 8"
    - "r8c4: set value 5, because of: r8c4: candidate 5"
    - "r8c7: set value 9, because of: r8c7: candidate 9"
  grid_output:
    - ╔═════════════════╦═════════════════╦═════════════════╗
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║   6 │  5  │  2  ║ 4   │  8  │  3  ║  9  │  1  │  7  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │  2  ║     │  23 │  23 ║
    - ║   6 │   6 │     ║  1  │   6 │   6 ║  4  │     │  5  ║
    - ║  89 │ 7   │  8  ║     │     │   9 ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │ 1   │     ║     │     │     ║     │  2  │     ║
    - ║  3  │     │  4  ║     │  7  │  5  ║  6  │     │  8  ║
    - ║     │     │     ║   9 │     │     ║     │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │  2  │     ║     │     │     ║ 1   │  2  │     ║
    - ║ 45  │     │  5  ║  5  │  3  │   6 ║     │ 4 6 │  9  ║
    - ║  8  │     │  8  ║ 7   │     │     ║  8  │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │   3 │   3 ║
    - ║  7  │  9  │  1  ║  8  │  2  │  4  ║  5  │   6 │     ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║  2  │  23 │     ║     │ 1   │     ║ 1 3 │     │ 123 ║
    - ║ 45  │     │  6  ║  5  │     │     ║     │  7  │     ║
    - ║  8  │     │     ║   9 │     │   9 ║  8  │     │     ║
    - ╠═════════════════╬═════════════════╬═════════════════╣
    - ║  2  │  2  │     ║   3 │     │     ║ 1 3 │     │ 1 3 ║
    - ║   6 │   6 │  9  ║ 4   │ 4   │     ║     │  5  │     ║
    - ║     │     │     ║     │     │  8  ║ 7   │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║   3 │     │     ║
    - ║  5  │  4  │  7  ║  2  │  9  │  1  ║     │  8  │  6  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║─────┼─────┼─────║─────┼─────┼─────║─────┼─────┼─────║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ║  1  │  8  │  3  ║  6  │  5  │  7  ║  2  │  9  │  4  ║
    - ║     │     │     ║     │     │     ║     │     │     ║
    - ╚═════════════════╩═════════════════╩═════════════════╝
---
deductions:
  - reasons:
      - position:
          row: 0
          column: 2
        candidates:
          - 2
    actions:
      - position:
          row: 0
          column: 2
        setValue: 2
  - reasons:
      - position:
          row: 0
          column: 6
        candidates:
          - 9
    actions:
      - position:
          row: 0
          column: 6
        setValue: 9
  - reasons:
      - position:
          row: 2
          column: 4
        candidates:
          - 7
    actions:
      - position:
          row: 2
          column: 4
        setValue: 7
  - reasons:
      - position:
          row: 4
          column: 0
        candidates:
          - 7
    actions:
      - position:
          row: 4
          column: 0
        setValue: 7
  - reasons:
      - position:
          row: 4
          column: 2
        candidates:
          - 1
    actions:
      - position:
          row: 4
          column: 2
        setValue: 1
  - reasons:
      - position:
          row: 7
          column: 1
        candidates:
          - 4
    actions:
      - position:
          row: 7
          column: 1
        setValue: 4
  - reasons:
      - position:
          row: 7
          column: 5
        candidates:
          - 1
    actions:
      - position:
          row: 7
          column: 5
        setValue: 1
  - reasons:
      - position:
          row: 8
          column: 1
        candidates:
          - 8
    actions:
      - position:
          row: 8
          column: 1
        setValue: 8
  - reasons:
      - position:
          row: 8
          column: 4
        candidates:
          - 5
    actions:
      - position:
          row: 8
          column: 4
        setValue: 5
  - reasons:
      - position:
          row: 8
          column: 7
        candidates:
          - 9
    actions:
      - position:
          row: 8
          column: 7
        setValue: 9
